--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -87,14 +87,29 @@
 
         </android.support.v7.widget.CardView>
 
-        <android.support.v7.widget.RecyclerView
-            android:layout_marginRight="20dp"
-            android:layout_marginLeft="20dp"
+        <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="10dp"
-            android:layout_below="@+id/linear"
-            android:background="@drawable/custom_ripple"
-            android:id="@+id/categoriesCourses" />
+            android:layout_below="@id/linear"
+            android:layout_marginTop="10dp">
+
+            <View
+                android:layout_width="0dp"
+                android:id="@+id/view"
+                android:layout_height="match_parent"
+                app:layout_constraintWidth_percent="0.080"
+                />
+
+            <android.support.v7.widget.RecyclerView
+                app:layout_constraintLeft_toRightOf="@+id/view"
+                android:layout_width="0dp"
+                app:layout_constraintWidth_percent="0.82"
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/custom_ripple"
+                android:id="@+id/categoriesCourses" />
+
+        </android.support.constraint.ConstraintLayout>
+
     </RelativeLayout>
 </FrameLayout>
