--- a/app/src/main/res/layout/item_article_2.xml
+++ b/app/src/main/res/layout/item_article_2.xml
@@ -3,7 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="7dp"
+    android:layout_marginLeft="5dp"
+    android:layout_marginRight="5dp"
+    android:layout_marginBottom="2dp"
     app:cardElevation="8dp">
 
     <LinearLayout
@@ -15,11 +17,11 @@
 
         <ImageView
             android:id="@+id/article_image"
+            android:scaleType="fitXY"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
             android:src="@drawable/intro_pic_1"
-            android:background="@color/cb_input_gray"
-            android:padding="3dp"
             />
 
         <TextView
