--- a/app/src/main/res/layout/activity_my_courses.xml
+++ b/app/src/main/res/layout/activity_my_courses.xml
@@ -10,11 +10,12 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        >
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_weight="1.35"
             android:orientation="horizontal"
             android:id="@+id/pager"
             >
@@ -24,6 +25,7 @@
                 android:id="@+id/viewPager">
             </android.support.v4.view.ViewPager>
             <LinearLayout
+
                 android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
