--- a/app/src/main/res/layout/activity_my_courses.xml
+++ b/app/src/main/res/layout/activity_my_courses.xml
@@ -7,6 +7,11 @@
     android:layout_height="match_parent"
     android:id="@+id/drawelayout"
     tools:context=".activity.MyCourses">
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
@@ -45,6 +50,62 @@
         </FrameLayout>
 
     </LinearLayout>
+
+        <RelativeLayout
+            android:visibility="gone"
+            android:id="@+id/relative_loading"
+            android:background="#919090"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <android.support.v7.widget.CardView
+                android:id="@+id/loading_card"
+                android:layout_centerInParent="true"
+                android:layout_width="220dp"
+                app:cardElevation="10dp"
+                app:cardCornerRadius="5dp"
+                android:layout_height="wrap_content">
+
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <LinearLayout
+                        android:weightSum="10"
+                        android:padding="10dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <ImageView
+                            android:src="@mipmap/ic_launcher"
+                            android:layout_width="50dp"
+                            android:layout_height="50dp" />
+
+                        <TextView
+                            android:textSize="13sp"
+                            android:text="Loading Just Give Us Few Seconds ..."
+                            android:layout_marginLeft="10dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
+
+                    </LinearLayout>
+
+                    <ProgressBar
+
+                        android:layout_marginBottom="10dp"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_width="35dp"
+                        android:layout_height="35dp" />
+
+                </LinearLayout>
+
+            </android.support.v7.widget.CardView>
+
+        </RelativeLayout>
+
+    </RelativeLayout>
+
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
         android:padding="0dp"
