--- a/app/src/main/res/layout/activity_pdf.xml
+++ b/app/src/main/res/layout/activity_pdf.xml
@@ -4,24 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Pdf"
-    android:padding="20dp"
-    >
+    tools:context=".Pdf">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/topic"
-        style="@style/Base.TextAppearance.AppCompat.Medium"
-        android:textColor="@color/colorPrimary"
-        android:textStyle="bold"
-        android:text="Unit 1 - Topic 2"
-        />
     <com.github.barteksc.pdfviewer.PDFView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/pdf"
-        android:layout_marginTop="40dp"
-        app:layout_constraintTop_toBottomOf="@id/topic"
         />
+
 </android.support.constraint.ConstraintLayout>
