--- a/app/src/main/res/layout/item_comment_child.xml
+++ b/app/src/main/res/layout/item_comment_child.xml
@@ -33,7 +33,7 @@
         </RelativeLayout>
 
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_marginRight="2dp"
             android:layout_height="wrap_content"
             android:text="name"
@@ -43,6 +43,16 @@
             android:textColor="#686060"
             android:layout_marginLeft="20dp"
             />
+
+        <com.github.curioustechizen.ago.RelativeTimeTextView
+            android:id="@+id/timestamp"
+            android:textSize="10sp"
+            android:text="12 min"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="2dp"
+            android:layout_toRightOf="@+id/name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
         <TextView
             android:layout_below="@id/name"
