--- a/app/src/main/res/layout/activity_my_courses.xml
+++ b/app/src/main/res/layout/activity_my_courses.xml
@@ -84,7 +84,7 @@
 
                         <TextView
                             android:textSize="13sp"
-                            android:text="Loading Just Give Us Few Seconds ..."
+                            android:text="@string/loading_just_a_sec"
                             android:layout_marginLeft="10dp"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
