--- a/app/src/main/res/layout/fragment_my_course.xml
+++ b/app/src/main/res/layout/fragment_my_course.xml
@@ -46,6 +46,7 @@
         <android.support.v7.widget.SearchView
             android:textSize="14sp"
         android:paddingRight="10dp"
+            app:iconifiedByDefault="false"
             app:queryHint="Search Your Course"
         android:gravity="center"
         android:layout_width="match_parent"
