--- a/app/src/main/res/layout/pdf_item.xml
+++ b/app/src/main/res/layout/pdf_item.xml
@@ -3,15 +3,37 @@
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardElevation="8dp"
-    android:layout_margin="10dp"
-    android:layout_height="150dp">
+    android:layout_margin="5dp"
+    android:layout_height="140dp">
 
-    <TextView
-        android:padding="10dp"
+    <RelativeLayout
+        android:padding="5dp"
+        android:weightSum="10"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/pdfText"
-        />
+        android:layout_height="match_parent">
 
+        <TextView
+            android:textStyle="bold"
+            android:textColor="#1a1919"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/pdfText"
+            android:layout_above="@+id/view"
+            />
+
+        <Button
+            android:id="@+id/view"
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginTop="5dp"
+            android:layout_width="wrap_content"
+            android:layout_height="35dp"
+            android:textColor="@color/white"
+            android:padding="5dp"
+            android:background="@drawable/border_curved"
+            android:text="View"
+            />
+
+    </RelativeLayout>
 
 </android.support.v7.widget.CardView>
