--- a/app/src/main/res/layout/activity_my_courses.xml
+++ b/app/src/main/res/layout/activity_my_courses.xml
@@ -83,6 +83,7 @@
                             android:layout_height="50dp" />
 
                         <TextView
+                            android:layout_gravity="center"
                             android:textSize="13sp"
                             android:text="@string/loading_just_a_sec"
                             android:layout_marginLeft="10dp"
@@ -92,7 +93,6 @@
                     </LinearLayout>
 
                     <ProgressBar
-
                         android:layout_marginBottom="10dp"
                         android:layout_gravity="center_horizontal"
                         android:layout_width="35dp"
