--- a/app/src/main/res/layout/items_free_course_new_2.xml
+++ b/app/src/main/res/layout/items_free_course_new_2.xml
@@ -5,6 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="280dp"
     android:layout_marginTop="20dp"
+    android:layout_marginLeft="5dp"
+    android:layout_marginRight="5dp"
+    android:layout_marginBottom="5dp"
     app:cardCornerRadius="8dp"
     app:cardElevation="3dp">
 
@@ -80,47 +83,14 @@
                 android:gravity="left|center"
                 >
 
-                <LinearLayout
-                    android:orientation="horizontal"
+                <RatingBar
+                    android:id="@+id/ratingBar_freeCourse"
+                    style="@style/RatingBarCustom"
+                    android:progressTint="@color/golden"
+                    android:layout_gravity="center"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
-
-                    <ImageView
-                        android:layout_marginLeft="5dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/star1"
-                        android:src="@drawable/ic_star_colour_full" />
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/star2"
-                        android:layout_toRightOf="@id/star1"
-                        android:src="@drawable/ic_star_colour_full"
-                        />
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/star3"
-                        android:layout_toRightOf="@id/star2"
-                        android:src="@drawable/ic_star_colour_full"
-                        />
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/star4"
-                        android:layout_toRightOf="@id/star3"
-                        android:src="@drawable/ic_star_colour_full"
-                        />
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/star5"
-                        android:layout_toRightOf="@id/star4"
-                        android:src="@drawable/ic_star_colour"
-                        />
-                </LinearLayout>
-
+                    android:layout_height="wrap_content"
+                    />
 
                 <TextView
                     android:id="@+id/ratings"
