Improved margins of card layouts

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#0780c9</color>
     <color name="colorPrimaryDark">#004ba0</color>
-    <color name="colorAccent">#8e99f3</color>
+    <color name="colorAccent">#55BFFF</color>
     <color name="white">#fff</color>
     <color name="black">#000</color>
     <color name="pink">#bebe</color>
