--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,7 +5,7 @@
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimary</item>
-        <item name="colorAccent">@color/colorAccent</item>
+            <item name="colorAccent">@color/colorPrimary</item>
         <item name="android:actionBarSize">@dimen/app_bar_width</item>
         <item name="actionBarSize">@dimen/app_bar_width</item>
         <item name="android:fontFamily">@font/robotoregular</item>
@@ -44,5 +44,5 @@
     <style name="RatingBarCustom" parent="Base.Widget.AppCompat.RatingBar.Small">
         <item name="android:colorControlNormal" app:ignore="NewApi">@color/golden</item>
     </style>
-
+    
 </resources>
