--- a/app/src/main/res/layout/fragment_no_internet_fragement.xml
+++ b/app/src/main/res/layout/fragment_no_internet_fragement.xml
@@ -34,12 +34,13 @@
         <TextView
             android:layout_marginTop="10dp"
             android:textStyle="bold"
+            android:layout_gravity="center_horizontal"
             android:textColor="@color/black"
-            android:gravity="center"
             android:id="@+id/text"
-            android:text="OOPS ! \n No Internet"
+            android:text="OOPS!\nNo Internet"
+            android:gravity="center"
             android:layout_below="@id/no_internet"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
         <TextView
