Fixed player issue

--- a/app/src/main/res/layout/activity_video_with_comment_land.xml
+++ b/app/src/main/res/layout/activity_video_with_comment_land.xml
@@ -3,7 +3,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#fff"
@@ -12,15 +11,15 @@
     <com.longtailvideo.jwplayer.JWPlayerView
         android:id="@+id/videoView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="200dp"
         />
 
     <LinearLayout
         android:visibility="gone"
         android:orientation="vertical"
         android:layout_width="wrap_content"
-        android:layout_below="@id/videoView"
         android:layout_height="wrap_content">
+
 
         <LinearLayout
             android:layout_marginTop="10dp"
@@ -28,7 +27,7 @@
             android:id="@+id/linear_rv"
             android:layout_height="wrap_content"
             android:weightSum="11"
-            >
+            android:layout_below="@id/videoView">
 
             <TextView
                 android:layout_below="@+id/videoView"
@@ -141,7 +140,6 @@
                 />
 
         </RelativeLayout>
-
         <Button
             android:visibility="gone"
             android:id="@+id/cancel"
