Highlighted playing video

--- a/app/src/main/res/layout/fragment_tutorial.xml
+++ b/app/src/main/res/layout/fragment_tutorial.xml
@@ -34,6 +34,7 @@
             android:layout_marginBottom="20dp"
             android:orientation="horizontal"
             android:layout_marginRight="20dp"
+            android:choiceMode="singleChoice"
             android:layout_below="@+id/videoView"
             android:id="@+id/expandableunit" />
 
