--- a/app/src/main/res/layout/dialog_content_language.xml
+++ b/app/src/main/res/layout/dialog_content_language.xml
@@ -2,12 +2,15 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="match_parent"
+    android:layout_width="300dp"
     android:layout_height="wrap_content">
 
     <TextView
         android:text="@string/select_preferred_language"
-        android:layout_margin="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
         android:textColor="#000"
         android:textSize="16sp"
         android:layout_width="wrap_content"
@@ -18,71 +21,174 @@
         android:layout_width="match_parent"
         android:layout_height="1.5dp"/>
 
+   <ScrollView
+       android:layout_width="match_parent"
+       android:layout_height="250dp">
+
+       <LinearLayout
+           android:layout_marginLeft="15dp"
+           android:layout_marginRight="15dp"
+           android:orientation="vertical"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content">
+
+           <RadioGroup
+               android:id="@+id/rg_language_group"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content">
+
+               <RadioButton
+                   android:id="@+id/rb_english"
+                   android:layout_marginTop="5dp"
+                   android:text="English"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content" />
+
+               <RadioButton
+                   android:id="@+id/rb_hindi"
+                   android:text="Hindi"
+                   android:layout_marginTop="5dp"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content" />
+
+               <RadioButton
+                   android:id="@+id/rb_tamil"
+                   android:text="Tamil"
+                   android:layout_marginTop="5dp"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content" />
+
+               <RadioButton
+                   android:id="@+id/rb_telugu"
+                   android:text="Telugu"
+                   android:layout_marginTop="5dp"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content" />
+
+           </RadioGroup>
+
+           <TextView
+               android:layout_marginTop="10dp"
+               android:text="@string/languages_coming_soon"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content" />
+
+           <RadioGroup
+               android:id="@+id/rg_language_group_coming_soon"
+               android:layout_marginTop="10dp"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content">
+
+               <RadioButton
+                   android:id="@+id/rb_bengali"
+                   android:enabled="false"
+                   android:text="Bengali"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content" />
+
+               <RadioButton
+                   android:id="@+id/rb_marathi"
+                   android:text="Marathi"
+                   android:enabled="false"
+                   android:layout_marginTop="5dp"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content" />
+
+               <RadioButton
+                   android:id="@+id/rb_kannada"
+                   android:text="Kannada"
+                   android:enabled="false"
+                   android:layout_marginTop="5dp"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content" />
+
+               <RadioButton
+                   android:id="@+id/rb_gujarati"
+                   android:text="Gujarati"
+                   android:enabled="false"
+                   android:layout_marginTop="5dp"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content" />
+
+               <RadioButton
+                   android:id="@+id/rb_malayalam"
+                   android:text="Malayalam"
+                   android:enabled="false"
+                   android:layout_marginTop="5dp"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content" />
+
+               <RadioButton
+                   android:id="@+id/rb_punjabi"
+                   android:text="Punjabi"
+                   android:enabled="false"
+                   android:layout_marginTop="5dp"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content" />
+
+           </RadioGroup>
+
+       </LinearLayout>
+
+   </ScrollView>
+
+    <!--<LinearLayout-->
+        <!--android:layout_marginTop="10dp"-->
+        <!--android:layout_marginBottom="10dp"-->
+        <!--android:orientation="horizontal"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content">-->
+
+        <!--<TextView-->
+            <!--android:id="@+id/tv_cancel"-->
+            <!--android:text="@string/Cancel"-->
+            <!--android:textColor="@color/colorPrimary"-->
+            <!--android:textSize="16sp"-->
+            <!--android:gravity="center"-->
+            <!--android:layout_weight="1"-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="wrap_content" />-->
+
+        <!--<TextView-->
+            <!--android:id="@+id/tv_ok"-->
+            <!--android:text="@string/ok"-->
+            <!--android:textColor="@color/colorPrimary"-->
+            <!--android:textSize="16sp"-->
+            <!--android:gravity="center"-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_weight="1"-->
+            <!--android:layout_height="wrap_content" />-->
+
+    <!--</LinearLayout>-->
+
     <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
-        <RadioGroup
-            android:id="@+id/rg_language_group"
-            android:layout_marginLeft="7dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-            <RadioButton
-                android:id="@+id/rb_english"
-                android:text="English"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-            <RadioButton
-                android:id="@+id/rb_hindi"
-                android:text="Hindi"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-            <RadioButton
-                android:id="@+id/rb_tamil"
-                android:text="Tamil"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-            <RadioButton
-                android:id="@+id/rb_telugu"
-                android:text="Telugu"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-        </RadioGroup>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_marginTop="30dp"
-        android:layout_marginBottom="10dp"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <TextView
+        <Button
             android:id="@+id/tv_cancel"
+            android:background="@drawable/intro_button"
             android:text="@string/Cancel"
-            android:textColor="@color/colorPrimary"
-            android:textSize="16sp"
-            android:gravity="center"
+            android:textColor="@color/white"
+            android:textSize="12sp"
             android:layout_weight="1"
             android:layout_width="0dp"
-            android:layout_height="wrap_content" />
+            android:layout_height="35dp" />
 
-        <TextView
+        <View
+            android:layout_width="1dp"
+            android:layout_height="35dp" />
+
+        <Button
             android:id="@+id/tv_ok"
+            android:background="@drawable/intro_button"
+            android:textColor="@color/white"
+            android:textSize="12sp"
             android:text="@string/ok"
-            android:textColor="@color/colorPrimary"
-            android:textSize="16sp"
-            android:gravity="center"
-            android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="wrap_content" />
+            android:layout_width="0dp"
+            android:layout_height="35dp" />
 
     </LinearLayout>
 
