--- a/app/src/main/res/layout/fragment_user_suggested.xml
+++ b/app/src/main/res/layout/fragment_user_suggested.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,18 +8,19 @@
     <LinearLayout
         android:id="@+id/user_suggested_zero_items"
         android:orientation="vertical"
-        android:layout_centerInParent="true"
+        android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
         <ImageView
+            android:layout_marginTop="10dp"
             android:layout_gravity="center"
             android:src="@drawable/ic_suggested"
             android:layout_width="150dp"
             android:layout_height="150dp" />
 
         <TextView
-            android:text="Let us know your interests so we can suggest some awesome courses for you!"
+            android:text="@string/suggest_user"
             android:gravity="center"
             android:layout_gravity="center"
             android:layout_marginTop="10dp"
@@ -29,4 +30,4 @@
 
     </LinearLayout>
 
-</RelativeLayout>
+</FrameLayout>
