--- a/app/src/main/res/layout/list_item_unit_contents_child.xml
+++ b/app/src/main/res/layout/list_item_unit_contents_child.xml
@@ -2,6 +2,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
+    android:background="@drawable/expandable_list_view_selector"
     android:layout_marginTop="6dp"
     android:layout_marginBottom="6dp"
     android:layout_width="match_parent"
@@ -9,11 +10,11 @@
 
     <LinearLayout
         android:orientation="horizontal"
+        android:layout_marginStart="35dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <TextView
-        android:layout_marginStart="35dp"
         android:id="@+id/tv_video_title"
         android:text="Video Name"
         android:textColor="@color/dark_gray"
