--- a/app/src/main/res/menu/myprofile_navigation.xml
+++ b/app/src/main/res/menu/myprofile_navigation.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:title="My Courses"
+        android:title="My Account"
         android:id="@+id/navigation_myCourses"
         android:icon="@drawable/ic_interview"
         />
@@ -14,7 +14,7 @@
         />
 
     <item
-        android:title="Certtificates"
+        android:title="Certificates"
         android:id="@+id/navigation_certificates"
         android:icon="@drawable/ic_certificate"
         />
