--- a/app/src/main/res/layout/fragment_no_internet_fragement.xml
+++ b/app/src/main/res/layout/fragment_no_internet_fragement.xml
@@ -59,7 +59,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:text="Retry"
+            android:text="@string/retry"
             android:layout_gravity="center"
             android:background="@color/colorPrimary"
             android:textColor="@color/white"
