--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#0780c9</color>
-    <color name="colorPrimaryDark">#004ba0</color>
+    <color name="colorPrimary">#29485A</color>
+    <color name="colorPrimaryDark">#29485A</color>
     <color name="colorAccent">#55BFFF</color>
     <color name="white">#fff</color>
     <color name="black">#000</color>
@@ -28,4 +28,5 @@
     <color name="dark_gray">#8d8d8d</color>
     <color name="userProf_options_textColor">#000</color>
     <color name="golden">#FFC300</color>
+
 </resources>
